# Proyecto-03-CE-2103

./: CMakeLists.txt  main.cpp
1.PorComprimir/: texto
Archivo Binario/: BGmusic.txt  Proyecto #2 - Paint++.txt
Binario/: FileToBinary.cpp  FileToBinary.h
Comprimido/: The_Clone_Wars_Logo_Bleu.txt  texto
Descomprimido/: The_Clone_Wars_Logo_Bleu.txt  index.txt
Huffman/: Huffman_Algorithm.cpp  Huffman_Algorithm.h
Interfaz/web-api/: package-lock.json
Interfaz/web-app/: package-lock.json  package.json
Interfaz/web-app/src/: App.js  GoToFilesBtn.js  Login.js  Logout.js  Profile.js  index.js
Interfaz/web-mongo/: app.js  package-lock.json  package.json
Interfaz/web-mongo/views/: index.ejs
LZ77/: LZ77_Algorithm.cpp  LZ77_Algorithm.h
LZ78/: LZ78_Algorithm.cpp  LZ78_Algorithm.h  bitfile.cpp  bitfile.h  dictionary.cpp  dictionary.h
LZW/LZWCompress/: LZW.cpp
LZW/LZWDecompress/: LZW.cpp
